Text change-agreed

--- a/Skeleton.html
+++ b/Skeleton.html
@@ -14,7 +14,7 @@
 		<h2>First Sub-Heading</h2>
 		<p>This is my <em>first</em> paragraph.</p>
 		<h2>Second Sub-Heading</h2>
-		<p>This is <strong>second</strong> paragraph</p>
+		<p>This is <strong>2nd</strong> paragraph</p>
 		</article>
 		<footer>
 			Copyright 2015
