--- a/Blog.html
+++ b/Blog.html
@@ -7,8 +7,25 @@
 <body>
 <header>
 	<h1>My Blog</h1>
-	<section><header><article><p>I am really looking forward to learning how to build and develop webpages.</p></article><h2>I built a webpage.</h2><h3>Sep 08, 2015</h3><h4>Meron Tecle</h4></header></section>
-	<aside><section><h4>Widget</h4></section><section><h4>Widget</h4></section></aside>
+</header>	
+<section>
+	<header>
+		<h2>I built a webpage.</h2>
+		<h3>Sep 08, 2015</h3>
+		<h4>Meron Tecle</h4>
+	</header>
+	<article>
+		<p>I am really looking forward to learning how to build and develop webpages.</p>
+	</article>
+</section>
+
+	<aside>
+		<section>
+		<h4>Widget</h4>
+		</section><section>
+		<h4>Widget</h4>
+		</section>
+	</aside>
 </header>
 </body>
 </html>
