--- a/Blog.html
+++ b/Blog.html
@@ -6,24 +6,27 @@
 </head>
 <body>
 <header>
+	<img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRdJ8TRhe4HoIxdyvPNcw9CXAl7BoGv4UnnIu4ooNF5ANAK9dI1">
 	<h1>My Blog</h1>
 </header>	
 <section>
 	<header>
+		<img src="http://placekitten.com/200/150">
 		<h2>I built a webpage.</h2>
 		<h3>Sep 08, 2015</h3>
 		<h4>Meron Tecle</h4>
 	</header>
 	<article>
-		<p>I am really looking forward to learning how to build and develop webpages.</p>
+		<p>I am <strong>really</strong> looking forward to learning how to build and develop webpages.</p>
 	</article>
 </section>
 
 	<aside>
 		<section>
-		<h4>Widget</h4>
-		</section><section>
-		<h4>Widget</h4>
+			<h4>Widget</h4>
+		</section>
+		<section>
+			<h4>Widget</h4>
 		</section>
 	</aside>
 </header>
