--- a/Blog.html
+++ b/Blog.html
@@ -14,10 +14,10 @@
 		<img src="http://placekitten.com/200/150">
 		<h2>I built a webpage.</h2>
 		<h3>Sep 08, 2015</h3>
-		<h4>Meron Tecle</h4>
+		<h4>Meron <span style="color: green;">Tecle</span></h4>
 	</header>
 	<article>
-		<p>I am <strong>really</strong> looking forward to learning how to build and develop webpages.</p>
+		<p>I am <strong>really</strong> looking forward to <strong>learning</strong> how to <em>build</em> and <em>develop</em> webpages.</p>
 	</article>
 </section>
 
