stylesheet and colour of name change

--- a/Skeleton.html
+++ b/Skeleton.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 	<title>First website.</title>
+	<link rel="stylesheet" href="skeleton.css">
 	</head>
 	<body>
 		<nav>
@@ -9,15 +10,16 @@
 		</nav>
 		<header>
 			<h1>This is the header.</h1>
+			<img src="http://www.placecage.com/g/100/100" id="cage">
 		</header>
 		<article>
 		<h2>First Sub-Heading</h2>
-		<p>This is my <em>first</em> paragraph.</p>
+		<p class="first">This is my <em>first</em> paragraph.</p>
 		<h2>Second Sub-Heading</h2>
 		<p>This is <strong>2nd</strong> paragraph</p>
 		</article>
 		<footer>
-			Copyright 2015
+			<p>Copyright 2015</p>
 		</footer>
 	</body>
 </html>
