--- a/Blog.html
+++ b/Blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-blue.css">
+<link rel="stylesheet" href="style.css">
 	<title></title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 		<img src="http://placekitten.com/200/150">
 		<h2>I built a webpage.</h2>
 		<h3>Sep 08, 2015</h3>
-		<h4>Meron <span style="color: green;">Tecle</span></h4>
+		<h4><span style="color: green;"> Meron Tecle</span></h4>
 	</header>
 	<article>
 		<p>I am <strong>really</strong> looking forward to <strong>learning</strong> how to <em>build</em> and <em>develop</em> webpages.</p>
