--- a/Blog.html
+++ b/Blog.html
@@ -24,10 +24,20 @@
 
 	<aside>
 		<section>
-			<h4>Widget</h4>
+			<h4>My Pet</h4>
+			<p>Rex</p>
 		</section>
 		<section>
-			<h4>Widget</h4>
+			<h4>My Favourite Colour</h4>
+			<p class="green">Green</p>
+		</section>
+		<section>
+			<h4>Bucket List</h4>
+			<ul>
+				<li>Successfully complete this blog</li>
+				<li>Make more web pages</li>
+			</ul>
+
 		</section>
 	</aside>
 </header>
