--- a/Blog.html
+++ b/Blog.html
@@ -3,12 +3,11 @@
 <head>
 <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-blue.css">
 <link rel="stylesheet" href="style.css">
-	<title></title>
+	<title>Meron's Blog Post</title>
 </head>
 <body>
-<header>
-	<img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRdJ8TRhe4HoIxdyvPNcw9CXAl7BoGv4UnnIu4ooNF5ANAK9dI1">
-	<h1>My Blog</h1>
+<header class="top">
+	<h1>My Blog </h1>
 </header>	
 <section>
 	<header>
@@ -19,9 +18,9 @@
 	</header>
 	<article>
 		<p>I am <strong>really</strong> looking forward to <strong>learning</strong> how to <em>build</em> and <em>develop</em> webpages.</p>
+		<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. </p>
 	</article>
 </section>
-
 	<aside>
 		<section>
 			<h4>My Pet</h4>
@@ -36,6 +35,7 @@
 			<ul>
 				<li>Successfully complete this blog</li>
 				<li>Make more web pages</li>
+				<li>Give more than I take</li>
 			</ul>
 
 		</section>
